--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -56,6 +56,75 @@
         <![endif]-->
 
 
+        <section class="mentors">
+            <h2 class="mentors__heading title container">
+                Кто подготовит вашего ребенка на&nbsp;80+
+            </h2>
+            <div class="mentors__body container">
+                <div class="mentors__preview">
+                    <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/RcDV0GdIktc?si=DmoJaFphk6ZBrT_c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <div class="mentors__content">
+                    <b class="mentors__name">
+                        Ирина Александровна Кривенкова
+                    </b>
+                    <div class="mentors__summary wysiwyg wysiwyg--double">
+                        <ul>
+                            <li>Окончила МГУП с красным дипломом</li>
+                            <li>Стаж: 30+ лет</li>
+                            <li>3 000 подготовленных учеников со средним баллом <strong>89</strong></li>
+                        </ul>
+                        <p>
+                            Являлась одним из составителей "Словаря языка Михаила Шолохова". Автор "Онлайн-курса по подготовке к ЕГЭ по русскому языку" и курса "Полный разбор трёх сочинений".
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="mentors__list container container--wide">
+                <div class="mentors__item teacher">
+                    <a class="teacher__preview" href="#">
+                        <img class="teacher__photo" src="../temp/avatar-a@2x.jpg" width="46" height="46" alt="">
+                    </a>
+                    <div class="teacher__content">
+                        <div class="teacher__name">
+                            <a class="link link--text-alike" href="#">Аня Осипова</a>
+                        </div>
+                        <div class="teacher__score">
+                            <span class="nobr">балл до: 60</span> / <span class="nobr">балл после <strong class="highlight">95</strong></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="mentors__item teacher">
+                    <a class="teacher__preview" href="#">
+                        <img class="teacher__photo" src="../temp/avatar-b@2x.jpg" width="46" height="46" alt="">
+                    </a>
+                    <div class="teacher__content">
+                        <div class="teacher__name">
+                            <a class="link link--text-alike" href="#">Женя Полежаев</a>
+                        </div>
+                        <div class="teacher__score">
+                            <span class="nobr">балл до: 50</span> / <span class="nobr">балл после <strong class="highlight">90</strong></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="mentors__item teacher">
+                    <a class="teacher__preview" href="#">
+                        <img class="teacher__photo" src="../temp/avatar-a@2x.jpg" width="46" height="46" alt="">
+                    </a>
+                    <div class="teacher__content">
+                        <div class="teacher__score">
+                            <div class="teacher__name">
+                                <a class="link link--text-alike" href="#">Ира Ракитина</a>
+                            </div>
+                            <div class="teacher__score">
+                                <span class="nobr">балл до: 60</span> / <span class="nobr">балл после <strong class="highlight">95</strong></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="trial container container--wide">
             <div class="trial__panel">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, nam sapiente. A alias architecto assumenda blanditiis cum, cupiditate debitis distinctio, earum eum exercitationem fuga illo inventore nemo quas quod rem repudiandae temporibus vel, vero voluptatibus! Deserunt ipsa labore nostrum similique soluta temporibus tenetur totam. Aliquid debitis fugiat fugit quia suscipit. Amet aperiam assumenda atque consectetur corporis cumque distinctio enim ex exercitationem in ipsa laborum, laudantium minima molestias mollitia nesciunt nobis nulla odit officiis pariatur perferendis provident quaerat quam qui quidem quo quod recusandae rem repellat repellendus sequi, soluta tenetur vitae. Amet consequatur deserunt eaque magni, non provident ut! Ea, repellendus.
