--- a/src/styles/_schedule.css
+++ b/src/styles/_schedule.css
@@ -68,4 +68,9 @@
             .schedule__submit {
                 margin-top: 40px;
             }
+                @media (width < 370px) {
+                    .schedule__submit .button__icon {
+                        display: none;
+                    }
+                }
 }
