--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -33,5 +33,9 @@
 @import url("_features.css");
 @import url("_courses.css");
 @import url("_trial.css");
+@import url("_teacher.css");
+@import url("_highlight.css");
+@import url("_mentors.css");
+@import url("_video.css");
 
 
