--- a/src/styles/_wysiwyg.css
+++ b/src/styles/_wysiwyg.css
@@ -14,6 +14,18 @@
     margin-bottom: 10px;
 }
 
+
+.wysiwyg--double p,
+.wysiwyg--double ul,
+.wysiwyg--double ol,
+.wysiwyg--double hr,
+.wysiwyg--double figure,
+.wysiwyg--double blockquote {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+
 .wysiwyg p:first-child,
 .wysiwyg ul:first-child,
 .wysiwyg ol:first-child,
