--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -55,6 +55,30 @@
             </div>
         <![endif]-->
 
+        <section class="ready container">
+            <div class="ready__stamp stamp">
+                <svg class="stamp__icon" xmlns="http://www.w3.org/2000/svg" width="54" height="54" fill="none" viewBox="0 0 54 54">
+                    <path fill="#AAB8C2" d="M52.5 39a6 6 0 0 1-6 6h-39a6 6 0 0 1-6-6V9.47C1.5 6.155 10.187 0 13.5 0h30.938c4.64 0 8.062 3.468 8.062 8.063V39Z"/>
+                    <path fill="#F5F8FA" d="M49.5 45a6 6 0 0 1-6 6h-33a6 6 0 0 1-6-6V9c0-6.179-.032-6 7.5-6h31.5a6 6 0 0 1 6 6v36Z"/>
+                    <path fill="#fff" d="M46.5 46.5A4.5 4.5 0 0 1 42 51H6a4.5 4.5 0 0 1-4.5-4.5v-36A4.5 4.5 0 0 1 6 6h36a4.5 4.5 0 0 1 4.5 4.5v36Z"/>
+                    <path fill="#AAB8C2" d="M46.5 48a6 6 0 0 1-6 6H9a6 6 0 0 1-6-6V15a6 6 0 0 1 6-6h31.5a6 6 0 0 1 6 6v33Z"/>
+                    <path fill="#E1E8ED" d="M43.5 48a6 6 0 0 1-6 6H9a6 6 0 0 1-6-6V18a6 6 0 0 1 6-6h29.002c3.314 0 5.498 2.184 5.498 5.497V48Z"/>
+                    <path fill="#AAB8C2" d="M9 9C6.468 9 6.404 6.117 7.5 4.875 8.748 3.463 10.688 3 14.157 3H16.5V0h-4.079C6.468 0 1.5 3.75 1.5 8.063V48a6 6 0 0 0 6 6h3V9H9Z"/>
+                    <path fill="#FC5E38" d="M25.5 6v34.5l6-9 6 9V6h-12Z"/>
+                    <path fill="#FC5E38" d="M37.5 42a1.501 1.501 0 0 1-1.248-.667L31.5 34.205l-4.752 7.128A1.497 1.497 0 0 1 24 40.5V6a1.5 1.5 0 0 1 1.5-1.5h12A1.5 1.5 0 0 1 39 6v34.5a1.5 1.5 0 0 1-1.5 1.5Zm-6-12c.501 0 .969.25 1.248.668L36 35.544V7.5h-9v28.045l3.252-4.878A1.502 1.502 0 0 1 31.5 30Z"/>
+                    <path fill="#F5F8FA" d="M22.5 3h18v3h-18V3Z"/>
+                </svg>
+            </div>
+            <div class="ready__body">
+                <h2 class="ready__heading">
+                    Нашими <a class="link link--text-alike" href="#">материалами</a> для подготовки
+                    ежемесячно пользуются 500 тыс. человек*
+                </h2>
+                <div class="ready__note">
+                    *Сведения о посещении сайта по данным Я.Метрики
+                </div>
+            </div>
+        </section>
 
         <section class="mentors">
             <h2 class="mentors__heading title container">
