--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -70,7 +70,7 @@
                 </svg>
             </div>
             <div class="ready__body">
-                <h2 class="ready__heading">
+                <h2 class="ready__heading title">
                     Нашими <a class="link link--text-alike" href="#">материалами</a> для подготовки
                     ежемесячно пользуются 500 тыс. человек*
                 </h2>
