--- a/src/styles/_mentors.css
+++ b/src/styles/_mentors.css
@@ -48,7 +48,7 @@
 @media (width < 740px) {
 
     .mentors {
-        /*margin-top: 123px;*/
+        margin-top: 90px;
     }
         .mentors__heading {
             /*margin-top: 0;*/
