--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -55,6 +55,128 @@
             </div>
         <![endif]-->
 
+        <div class="partners container container--wide">
+            <div class="partners__item">
+                <picture>
+                    <source srcset="
+                        ../content/partners/partner-a@2x.avif 2x,
+                        ../content/partners/partner-a@1x.avif 1x
+                        "
+                            type="image/avif"
+                    >
+                    <img class="partners__logo"
+                         srcset="../content/partners/partner-a@2x.jpg 2x"
+                         src="../content/partners/partner-a@1x.jpg"
+                         width="150"
+                         height="150"
+                         alt=""
+                    >
+                </picture>
+            </div>
+            <div class="partners__item">
+                <picture>
+                    <source srcset="
+                        ../content/partners/partner-b@2x.avif 2x,
+                        ../content/partners/partner-b@1x.avif 1x
+                        "
+                            type="image/avif"
+                    >
+                    <img class="partners__logo"
+                         srcset="../content/partners/partner-b@2x.jpg 2x"
+                         src="../content/partners/partner-b@1x.jpg"
+                         width="150"
+                         height="150"
+                         alt=""
+                    >
+                </picture>
+            </div>
+            <div class="partners__item">
+                <picture>
+                    <source srcset="
+                        ../content/partners/partner-c@2x.avif 2x,
+                        ../content/partners/partner-c@1x.avif 1x
+                        "
+                            type="image/avif"
+                    >
+                    <img class="partners__logo"
+                         srcset="../content/partners/partner-c@2x.jpg 2x"
+                         src="../content/partners/partner-c@1x.jpg"
+                         width="150"
+                         height="150"
+                         alt=""
+                    >
+                </picture>
+            </div>
+            <div class="partners__item">
+                <picture>
+                    <source srcset="
+                        ../content/partners/partner-d@2x.avif 2x,
+                        ../content/partners/partner-d@1x.avif 1x
+                        "
+                            type="image/avif"
+                    >
+                    <img class="partners__logo"
+                         srcset="../content/partners/partner-d@2x.jpg 2x"
+                         src="../content/partners/partner-d@1x.jpg"
+                         width="150"
+                         height="150"
+                         alt=""
+                    >
+                </picture>
+            </div>
+            <div class="partners__item">
+                <picture>
+                    <source srcset="
+                        ../content/partners/partner-e@2x.avif 2x,
+                        ../content/partners/partner-e@1x.avif 1x
+                        "
+                            type="image/avif"
+                    >
+                    <img class="partners__logo"
+                         srcset="../content/partners/partner-e@2x.jpg 2x"
+                         src="../content/partners/partner-e@1x.jpg"
+                         width="150"
+                         height="150"
+                         alt=""
+                    >
+                </picture>
+            </div>
+            <div class="partners__item">
+                <picture>
+                    <source srcset="
+                        ../content/partners/partner-f@2x.avif 2x,
+                        ../content/partners/partner-f@1x.avif 1x
+                        "
+                            type="image/avif"
+                    >
+                    <img class="partners__logo"
+                         srcset="../content/partners/partner-f@2x.jpg 2x"
+                         src="../content/partners/partner-f@1x.jpg"
+                         width="150"
+                         height="150"
+                         alt=""
+                    >
+                </picture>
+            </div>
+            <div class="partners__item">
+                <picture>
+                    <source srcset="
+                        ../content/partners/partner-g@2x.avif 2x,
+                        ../content/partners/partner-g@1x.avif 1x
+                        "
+                            type="image/avif"
+                    >
+                    <img class="partners__logo"
+                         srcset="../content/partners/partner-g@2x.jpg 2x"
+                         src="../content/partners/partner-g@1x.jpg"
+                         width="150"
+                         height="150"
+                         alt=""
+                    >
+                </picture>
+            </div>
+        </div>
+
         <section class="ready container">
             <div class="ready__stamp stamp">
                 <svg class="stamp__icon" xmlns="http://www.w3.org/2000/svg" width="54" height="54" fill="none" viewBox="0 0 54 54">
