--- a/src/styles/_partners.css
+++ b/src/styles/_partners.css
@@ -1,4 +1,5 @@
 .partners {
+    margin-top: 120px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -15,6 +16,7 @@
 @media (width < 740px) {
 
     .partners {
+        margin-top: 80px;
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(40px, 1fr));
         gap: 24px;
