--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -55,6 +55,24 @@
             </div>
         <![endif]-->
 
+        <section class="results container container--wide">
+            <h2 class="results__heading title">
+                Результаты учеников
+            </h2>
+            <div class="results__body">
+                <div class="card">
+                    <a class="card__preview" href="#">
+                        <img class="card__photo"
+                             src="../temp/avatar-full-a@2x.jpg"
+                             width="180"
+                             height="180"
+                             alt=""
+                        >
+                    </a>
+                </div>
+            </div>
+        </section>
+
         <div class="partners container container--wide">
             <div class="partners__item">
                 <picture>
@@ -135,7 +153,7 @@
                     <img class="partners__logo"
                          srcset="../content/partners/partner-e@2x.jpg 2x"
                          src="../content/partners/partner-e@1x.jpg"
-                         width="150"
+                         width="153"
                          height="150"
                          alt=""
                     >
