--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -247,7 +247,7 @@
             <div class="mentors__list container container--wide">
                 <div class="mentors__item teacher">
                     <a class="teacher__preview" href="#">
-                        <img class="teacher__photo" src="../temp/avatar-a@2x.jpg" width="46" height="46" alt="">
+                        <img class="teacher__photo" src="../temp/avatar-small-a@2x.jpg" width="46" height="46" alt="">
                     </a>
                     <div class="teacher__content">
                         <div class="teacher__name">
@@ -260,7 +260,7 @@
                 </div>
                 <div class="mentors__item teacher">
                     <a class="teacher__preview" href="#">
-                        <img class="teacher__photo" src="../temp/avatar-b@2x.jpg" width="46" height="46" alt="">
+                        <img class="teacher__photo" src="../temp/avatar-small-b@2x.jpg" width="46" height="46" alt="">
                     </a>
                     <div class="teacher__content">
                         <div class="teacher__name">
@@ -273,7 +273,7 @@
                 </div>
                 <div class="mentors__item teacher">
                     <a class="teacher__preview" href="#">
-                        <img class="teacher__photo" src="../temp/avatar-a@2x.jpg" width="46" height="46" alt="">
+                        <img class="teacher__photo" src="../temp/avatar-small-a@2x.jpg" width="46" height="46" alt="">
                     </a>
                     <div class="teacher__content">
                         <div class="teacher__score">
