--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -69,6 +69,26 @@
                              alt=""
                         >
                     </a>
+                    <div class="card__body">
+                        <div class="card__name">
+                            <a class="link link--text-alike" href="#">
+                                Григорий Нестеренко
+                            </a>
+                        </div>
+                        <div class="card__university">
+                            Московский Государственный Университет
+                        </div>
+                        <div class="card__data">
+                            <div class="card__stat">
+                                <div class="card__stat-heading">Начальный балл</div>
+                                <div class="card__stat-value">60</div>
+                            </div>
+                            <div class="card__stat">
+                                <div class="card__stat-heading">Результат на ЕГЭ</div>
+                                <div class="card__stat-value card__stat-value--highlight">100</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
