--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -55,40 +55,209 @@
             </div>
         <![endif]-->
 
-        <section class="results container container--wide">
-            <h2 class="results__heading title">
+        <section class="results">
+            <h2 class="results__heading title container container--wide">
                 Результаты учеников
             </h2>
-            <div class="results__body">
-                <div class="card">
-                    <a class="card__preview" href="#">
-                        <img class="card__photo"
-                             src="../temp/avatar-full-a@2x.jpg"
-                             width="180"
-                             height="180"
-                             alt=""
-                        >
-                    </a>
-                    <div class="card__body">
-                        <div class="card__name">
-                            <a class="link link--text-alike" href="#">
-                                Григорий Нестеренко
-                            </a>
-                        </div>
-                        <div class="card__university">
-                            Московский Государственный Университет
-                        </div>
-                        <div class="card__data">
-                            <div class="card__stat">
-                                <div class="card__stat-heading">Начальный балл</div>
-                                <div class="card__stat-value">60</div>
+            <div class="results__body container container--wide">
+                <div class="swiper swiper--results">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="card">
+                                <a class="card__preview" href="#">
+                                    <img class="card__photo"
+                                         src="../temp/avatar-full-a@2x.jpg"
+                                         width="180"
+                                         height="180"
+                                         alt=""
+                                    >
+                                </a>
+                                <div class="card__body">
+                                    <div class="card__name">
+                                        <a class="link link--text-alike" href="#">
+                                            Наталья Олейник
+                                        </a>
+                                    </div>
+                                    <div class="card__university">
+                                        Московский Государственный Университет
+                                    </div>
+                                    <div class="card__data">
+                                        <div class="card__stat">
+                                            <div class="card__stat-heading">Начальный балл</div>
+                                            <div class="card__stat-value">60</div>
+                                        </div>
+                                        <div class="card__stat">
+                                            <div class="card__stat-heading">Результат на ЕГЭ</div>
+                                            <div class="card__stat-value card__stat-value--highlight">100</div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="card__stat">
-                                <div class="card__stat-heading">Результат на ЕГЭ</div>
-                                <div class="card__stat-value card__stat-value--highlight">100</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="card">
+                                <a class="card__preview" href="#">
+                                    <img class="card__photo"
+                                         src="../temp/avatar-full-b@2x.jpg"
+                                         width="180"
+                                         height="180"
+                                         alt=""
+                                    >
+                                </a>
+                                <div class="card__body">
+                                    <div class="card__name">
+                                        <a class="link link--text-alike" href="#">
+                                            Григорий Нестеренко
+                                        </a>
+                                    </div>
+                                    <div class="card__university">
+                                        Московский Государственный Университет
+                                    </div>
+                                    <div class="card__data">
+                                        <div class="card__stat">
+                                            <div class="card__stat-heading">Начальный балл</div>
+                                            <div class="card__stat-value">60</div>
+                                        </div>
+                                        <div class="card__stat">
+                                            <div class="card__stat-heading">Результат на ЕГЭ</div>
+                                            <div class="card__stat-value card__stat-value--highlight">100</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="card">
+                                <a class="card__preview" href="#">
+                                    <img class="card__photo"
+                                         src="../temp/avatar-full-a@2x.jpg"
+                                         width="180"
+                                         height="180"
+                                         alt=""
+                                    >
+                                </a>
+                                <div class="card__body">
+                                    <div class="card__name">
+                                        <a class="link link--text-alike" href="#">
+                                            Наталья Олейник
+                                        </a>
+                                    </div>
+                                    <div class="card__university">
+                                        Московский Государственный Университет
+                                    </div>
+                                    <div class="card__data">
+                                        <div class="card__stat">
+                                            <div class="card__stat-heading">Начальный балл</div>
+                                            <div class="card__stat-value">60</div>
+                                        </div>
+                                        <div class="card__stat">
+                                            <div class="card__stat-heading">Результат на ЕГЭ</div>
+                                            <div class="card__stat-value card__stat-value--highlight">100</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="card">
+                                <a class="card__preview" href="#">
+                                    <img class="card__photo"
+                                         src="../temp/avatar-full-b@2x.jpg"
+                                         width="180"
+                                         height="180"
+                                         alt=""
+                                    >
+                                </a>
+                                <div class="card__body">
+                                    <div class="card__name">
+                                        <a class="link link--text-alike" href="#">
+                                            Григорий Нестеренко
+                                        </a>
+                                    </div>
+                                    <div class="card__university">
+                                        Московский Государственный Университет
+                                    </div>
+                                    <div class="card__data">
+                                        <div class="card__stat">
+                                            <div class="card__stat-heading">Начальный балл</div>
+                                            <div class="card__stat-value">60</div>
+                                        </div>
+                                        <div class="card__stat">
+                                            <div class="card__stat-heading">Результат на ЕГЭ</div>
+                                            <div class="card__stat-value card__stat-value--highlight">100</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="card">
+                                <a class="card__preview" href="#">
+                                    <img class="card__photo"
+                                         src="../temp/avatar-full-a@2x.jpg"
+                                         width="180"
+                                         height="180"
+                                         alt=""
+                                    >
+                                </a>
+                                <div class="card__body">
+                                    <div class="card__name">
+                                        <a class="link link--text-alike" href="#">
+                                            Наталья Олейник
+                                        </a>
+                                    </div>
+                                    <div class="card__university">
+                                        Московский Государственный Университет
+                                    </div>
+                                    <div class="card__data">
+                                        <div class="card__stat">
+                                            <div class="card__stat-heading">Начальный балл</div>
+                                            <div class="card__stat-value">60</div>
+                                        </div>
+                                        <div class="card__stat">
+                                            <div class="card__stat-heading">Результат на ЕГЭ</div>
+                                            <div class="card__stat-value card__stat-value--highlight">100</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="card">
+                                <a class="card__preview" href="#">
+                                    <img class="card__photo"
+                                         src="../temp/avatar-full-b@2x.jpg"
+                                         width="180"
+                                         height="180"
+                                         alt=""
+                                    >
+                                </a>
+                                <div class="card__body">
+                                    <div class="card__name">
+                                        <a class="link link--text-alike" href="#">
+                                            Григорий Нестеренко
+                                        </a>
+                                    </div>
+                                    <div class="card__university">
+                                        Московский Государственный Университет
+                                    </div>
+                                    <div class="card__data">
+                                        <div class="card__stat">
+                                            <div class="card__stat-heading">Начальный балл</div>
+                                            <div class="card__stat-value">60</div>
+                                        </div>
+                                        <div class="card__stat">
+                                            <div class="card__stat-heading">Результат на ЕГЭ</div>
+                                            <div class="card__stat-value card__stat-value--highlight">100</div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
+                    <!-- If we need pagination -->
+                    <div class="swiper-pagination"></div>
+
                 </div>
             </div>
         </section>
