--- a/src/styles/_card.css
+++ b/src/styles/_card.css
@@ -9,6 +9,7 @@
     .card__preview {
         flex-shrink: 0;
         display: block;
+        width: 180px;
         border-radius: 50%;
         overflow: hidden;
         transition: filter var(--transition-hover);
@@ -17,9 +18,11 @@
     .card__preview:hover {
         filter: brightness(105%) contrast(105%);
     }
-
         .card__photo {
             vertical-align: top;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
 
 
@@ -27,11 +30,15 @@
         margin-top: 10px;
     }
         .card__name {
-
+            font-weight: 600;
+            font-size: 16px;
+            line-height: 22px;
         }
 
         .card__university {
             margin-top: 23px;
+            font-size: 16px;
+            line-height: 22px;
         }
 
         .card__data {
@@ -61,3 +68,85 @@
                 .card__stat-value--highlight {
                     color: var(--orange);
                 }
+
+
+
+@media (width < 740px) {
+
+    .card {
+        padding: 30px var(--container-padding) 40px;
+        /*background-color: #FFFFFF;*/
+        /*border-radius: 8px;*/
+        display: block;
+        /*align-items: flex-start;*/
+        /*gap: 36px;*/
+    }
+        .card__preview {
+            /*flex-shrink: 0;*/
+            /*display: block;*/
+            width: 106px;
+            height: 106px;
+            margin-left: auto;
+            margin-right: auto;
+            /*border-radius: 50%;*/
+            /*overflow: hidden;*/
+            /*transition: filter var(--transition-hover);*/
+        }
+
+        .card__preview:hover {
+            /*filter: brightness(105%) contrast(105%);*/
+        }
+            .card__photo {
+                /*vertical-align: top;*/
+            }
+
+
+        .card__body {
+            margin-top: 27px;
+        }
+            .card__name {
+                width: fit-content;
+                margin-left: auto;
+                margin-right: auto;
+            }
+
+            .card__university {
+                margin-top: 16px;
+                text-align: center;
+
+            }
+
+            .card__data {
+                margin-top: 27px;
+                max-width: 440px;
+                margin-left: auto;
+                margin-right: auto;
+                /*display: flex;*/
+                /*align-items: flex-start;*/
+                justify-content: space-around;
+                /*gap: 40px;*/
+            }
+                .card__stat {
+
+                }
+                    .card__stat-heading {
+                        /*margin-top: 0;*/
+                        /*margin-bottom: 0;*/
+                        /*font-weight: inherit;*/
+                        /*font-size: 14px;*/
+                        /*line-height: 20px;*/
+                        text-align: center;
+                    }
+
+                    .card__stat-value {
+                        /*margin-top: 3px;*/
+                        /*font-weight: 600;*/
+                        /*font-size: 20px;*/
+                        /*line-height: 24px;*/
+                        text-align: center;
+                    }
+
+                    .card__stat-value--highlight {
+                        /*color: var(--orange);*/
+                    }
+}
