trial frame and desktop responsiveness

--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -483,15 +483,25 @@
             </div>
         </section>
 
-        <section class="trial container container--wide">
-            <div class="trial__panel">
-                <div class="trial__illustration">
-                    <img class="trial__photo" srcset="../content/trial/trial-photo@2x.png 2x"
-                         src="../content/trial/trial-photo@1x.png"
-                         width="511"
-                         height="596"
-                         alt=""
-                    >
+        <section class="trial">
+            <div class="trial__wrap container container--wide">
+                <div class="trial__panel">
+                    <div class="trial__illustration">
+                        <img class="trial__photo" srcset="../content/trial/trial-photo@2x.png 2x"
+                             src="../content/trial/trial-photo@1x.png"
+                             width="511"
+                             height="596"
+                             alt=""
+                        >
+                    </div>
+                    <div class="trial__body">
+                        <h2 class="trial__heading">
+                            Запишите вашего ребенка на&nbsp;бесплатный пробный урок с&nbsp;экспертом ЕГЭ уже сейчас!
+                        </h2>
+                        <div class="trial__frame">
+
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
