--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -499,7 +499,7 @@
                             Запишите вашего ребенка на&nbsp;бесплатный пробный урок с&nbsp;экспертом ЕГЭ уже сейчас!
                         </h2>
                         <div class="trial__frame">
-
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet atque eligendi porro vel. Corporis deleniti deserunt fuga libero nobis quam, quas totam. Adipisci excepturi quam quis! Debitis nam nostrum obcaecati quod ullam voluptas. Architecto delectus ducimus eaque iste minus! Ab aliquid blanditiis dolore dolorem dolores dolorum ea error ex, facere fugiat fugit illo illum laborum magnam maxime minus nemo nihil nobis numquam, odio perspiciatis provident quia quod rem repellendus rerum sed tenetur ullam vel velit? Dolorum et hic quasi veniam! Consectetur corporis cumque, distinctio ea eligendi maxime nam nemo nobis officia quibusdam quos rerum, sint temporibus tenetur vitae voluptate voluptatibus?
                         </div>
                     </div>
                 </div>
