--- a/src/styles/_button.css
+++ b/src/styles/_button.css
@@ -1,4 +1,5 @@
 .button {
+    position: relative;
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -21,6 +22,9 @@
     user-select: none;
     transition: background-color var(--transition-hover);
 }
+    .button__label {
+        position: relative;
+    }
 
 .button:hover {
     background-color: var(--orange-90pct);
@@ -56,6 +60,73 @@
     .button__icon {
         vertical-align: top;
         fill: currentColor;
+    }
+
+
+
+
+
+@keyframes button-loading-spin {
+    100% { transform: rotate(360deg); }
+}
+
+.button_loading {
+    color: transparent;
+    pointer-events: none;
+}
+    .button_loading::after {
+        content: "";
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        display: block;
+        width: 24px;
+        height: 24px;
+        margin-top: -12px;
+        margin-left: -12px;
+        background-image: url("../vectors/button_loading.svg");
+        background-size: 24px 24px;
+        background-repeat: no-repeat;
+        background-position: center center;
+        animation: button-loading-spin 1s steps(12) infinite;
+    }
+
+    .button--secondary.button_loading::after {
+        filter: invert(1);
+    }
+
+    .button_loading .button__icon {
+        display: none;
+    }
+
+
+
+.button_success {
+    color: transparent;
+    pointer-events: none;
+}
+    .button_success::after {
+        content: "";
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        display: block;
+        width: 24px;
+        height: 24px;
+        margin-top: -12px;
+        margin-left: -12px;
+        background-image: url("../vectors/button_success.svg");
+        background-size: 24px 24px;
+        background-repeat: no-repeat;
+        background-position: center center;
+    }
+
+    .button--secondary.button_success::after {
+        filter: invert(1);
+    }
+
+    .button_success .button__icon {
+        display: none;
     }
 
 
