--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -41,5 +41,8 @@
 @import url("_partners.css");
 @import url("_card.css");
 @import url("_results.css");
+@import url("_subscription.css");
+@import url("_input.css");
+@import url("_alert.css");
 
 
