--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -44,5 +44,7 @@
 @import url("_subscription.css");
 @import url("_input.css");
 @import url("_alert.css");
+@import url("_notifications-center.css");
+@import url("_desktop-only.css");
 
 
