--- a/src/styles/_button.css
+++ b/src/styles/_button.css
@@ -70,11 +70,11 @@
     100% { transform: rotate(360deg); }
 }
 
-.button_loading {
+.button--loading {
     color: transparent;
     pointer-events: none;
 }
-    .button_loading::after {
+    .button--loading::after {
         content: "";
         position: absolute;
         left: 50%;
@@ -84,28 +84,28 @@
         height: 24px;
         margin-top: -12px;
         margin-left: -12px;
-        background-image: url("../vectors/button_loading.svg");
+        background-image: url("../vectors/button-loading.svg");
         background-size: 24px 24px;
         background-repeat: no-repeat;
         background-position: center center;
         animation: button-loading-spin 1s steps(12) infinite;
     }
 
-    .button--secondary.button_loading::after {
+    .button--secondary.button--loading::after {
         filter: invert(1);
     }
 
-    .button_loading .button__icon {
+    .button--loading .button__icon {
         display: none;
     }
 
 
 
-.button_success {
+.button--success {
     color: transparent;
     pointer-events: none;
 }
-    .button_success::after {
+    .button--success::after {
         content: "";
         position: absolute;
         left: 50%;
@@ -115,17 +115,17 @@
         height: 24px;
         margin-top: -12px;
         margin-left: -12px;
-        background-image: url("../vectors/button_success.svg");
+        background-image: url("../vectors/button-success.svg");
         background-size: 24px 24px;
         background-repeat: no-repeat;
         background-position: center center;
     }
 
-    .button--secondary.button_success::after {
+    .button--secondary.button--success::after {
         filter: invert(1);
     }
 
-    .button_success .button__icon {
+    .button--success .button__icon {
         display: none;
     }
 
