--- a/src/styles/_button.css
+++ b/src/styles/_button.css
@@ -130,3 +130,32 @@
     }
 
 
+.button--warning {
+    color: transparent;
+    pointer-events: none;
+}
+    .button--warning::after {
+        content: "";
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        display: block;
+        width: 24px;
+        height: 24px;
+        margin-top: -12px;
+        margin-left: -12px;
+        background-image: url("../vectors/button-warning.svg");
+        background-size: 24px 24px;
+        background-repeat: no-repeat;
+        background-position: center center;
+    }
+
+    .button--secondary.button--warning::after {
+        filter: invert(1);
+    }
+
+    .button--warning .button__icon {
+        display: none;
+    }
+
+
