--- a/src/styles/_button.css
+++ b/src/styles/_button.css
@@ -36,9 +36,15 @@
     transition: none;
 }
 
-.button:disabled,
-.button:disabled:hover,
-.button:disabled:active {
+/* Заблокированная кнопка, но не:
+    button--loading
+    button--success
+    button--warning
+    (в этих случая атрибут disabled всё-равно нужен, но стили там будут свои)
+ */
+.button:disabled:not(.button--loading):not(.button--success):not(.button--warning),
+.button:disabled:not(.button--loading):not(.button--success):not(.button--warning):hover,
+.button:disabled:not(.button--loading):not(.button--success):not(.button--warning):active {
     background-color: var(--disabled-background);
     color: var(--disabled-color);
     translate: none;
