--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -500,15 +500,17 @@
                         </h2>
                         <div class="trial__frame">
                             <div class="trial__form">
-                                <form class="subscription subscription_vertical">
-                                    <div class="subscription__field input">
-                                        <input class="input__widget" type="text" placeholder="Ваше имя">
-                                    </div>
-                                    <div class="subscription__field input">
-                                        <input class="input__widget" type="tel" placeholder="Телефон">
-                                    </div>
-                                    <div class="subscription__terms">
-                                        Согласен(а) на&nbsp;обработку персональных данных
+                                <form class="subscription" id="subscriptionForm">
+                                    <div class="subscription__body">
+                                        <div class="subscription__field input">
+                                            <input class="input__widget" type="text" placeholder="Ваше имя">
+                                        </div>
+                                        <div class="subscription__field input">
+                                            <input class="input__widget" type="tel" placeholder="Телефон">
+                                        </div>
+                                        <div class="subscription__terms">
+                                            Согласен(а) на&nbsp;обработку персональных данных
+                                        </div>
                                     </div>
                                     <button class="subscription__submit button button--secondary" type="button">
                                         Записаться на пробный урок
