--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -506,7 +506,7 @@
                                             <input class="input__widget" type="text" placeholder="Ваше имя">
                                         </div>
                                         <div class="subscription__field input">
-                                            <input class="input__widget" type="tel" placeholder="Телефон">
+                                            <input class="input__widget" type="tel" placeholder="Телефон" required>
                                         </div>
                                         <div class="subscription__terms">
                                             Согласен(а) на&nbsp;обработку персональных данных
