--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -512,7 +512,7 @@
                                             Согласен(а) на&nbsp;обработку персональных данных
                                         </div>
                                     </div>
-                                    <button class="subscription__submit button button--secondary" type="button">
+                                    <button class="subscription__submit button button--secondary" type="submit">
                                         Записаться на пробный урок
                                         <svg class="button__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25">
                                             <path d="M11.767 4.955c.44-.44 1.152-.44 1.591 0l6.75 6.75c.44.439.44 1.151 0 1.59l-6.75 6.75a1.125 1.125 0 0 1-1.591-1.59l4.83-4.83H4.686a1.125 1.125 0 0 1 0-2.25h11.91l-4.83-4.83a1.125 1.125 0 0 1 0-1.59Z"/>
