--- a/src/styles/_root.css
+++ b/src/styles/_root.css
@@ -9,7 +9,6 @@
     --container-padding: 30px;
     --disabled-background: #EAEAEA;
     --disabled-color: #999999;
-    /*--error: #FF0033;*/
     --beige: #FAF6F2;
     --orange: #FC5E38;
     --orange-90pct: #FD7658;
@@ -17,6 +16,9 @@
     --yellow: #FFD046;
     --white-hover: #F3F9FF;
     --light-orange: #FFDDD1;
+    --input-border: #B3B3B3;
+    --input-border-hover-and-focus: #7E7E7E;
+    --placeholder-color: #878787;
 }
 
 @media (350px <= width < 600px) {
