--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -502,10 +502,10 @@
                             <div class="trial__form">
                                 <form class="subscription" id="subscriptionForm">
                                     <div class="subscription__body">
-                                        <div class="subscription__field input">
+                                        <div class="subscription__field input input--inverted">
                                             <input class="input__widget" type="text" placeholder="Ваше имя">
                                         </div>
-                                        <div class="subscription__field input">
+                                        <div class="subscription__field input input--inverted">
                                             <input class="input__widget" type="tel" placeholder="Телефон" required>
                                         </div>
                                         <div class="subscription__terms">
