--- a/src/styles/_input.css
+++ b/src/styles/_input.css
@@ -102,3 +102,15 @@ select.input__widget:disabled {
 }
 
 
+
+.input--inverted {
+
+}
+    .input--inverted .input__widget {
+        border-color: transparent;
+        background-clip: border-box;
+    }
+
+    .input--inverted .input__widget:focus-visible {
+        box-shadow: none;
+    }
